# dashflow

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.cursor/: settings.json
.cursor/rules/: dashflow-backend.mdc  dashflow-cicd.mdc  dashflow-docs.mdc  dashflow-frontend.mdc  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py  002_domain_workspaces_projects_tasks.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  comments.py  health.py  me.py  projects.py  router.py  tasks.py  workspaces.py  ws.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  comment.py  enums.py  project.py  task.py  user.py  workspace.py  workspace_member.py
backend/app/repositories/: __init__.py  comment_repository.py  project_repository.py  task_repository.py  user_repository.py  workspace_member_repository.py  workspace_repository.py
backend/app/schemas/: __init__.py  auth.py  comment.py  project.py  task.py  user.py  workspace.py
backend/app/services/: __init__.py  auth_service.py  comment_service.py  project_service.py  task_service.py  workspace_service.py
backend/tests/: conftest.py  support.py  test_auth_api.py  test_authorization_api.py  test_harness_support.py  test_health.py
doc/: MVP-SCOPE.md  README.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+34 files in other folders)
